# forecasting-with-machine-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
01-forecasting-as-regression/: 01-feature-engineering.ipynb  02-feature-engineering-with-feature-engine.ipynb  03-benchmark-models.ipynb  04-single-step-forecasting-with-machine-learning.ipynb
02-multistep-forecasting/: 01-recursive-forecasting.ipynb  02-recursive-forecasting-with-future-known-features.ipynb  03-recursive-forecasting-with-window-features.ipynb  04-direct-forecasting-skforecast.ipynb  05-direct-forecasting-sklearn.ipynb  06-direct-forecasting-with-future-known-features.ipynb  training.ipynb
03-forecasting-as-regression/: 01-feature-engineering.ipynb  02-feature-engineering-with-feature-engine.ipynb  03-benchmark-models.ipynb  04-single-step-forecasting-with-machine-learning.ipynb
03-multiseries-forecasting/: 01-independent-multi-time-series-forecasting.ipynb  02-dependent-multi-time-series-forecasting.ipynb  exercise-1-solution.ipynb  exercise-1.ipynb  exercise-2-solution.ipynb  exercise-2.ipynb
04-backtesting/: 01-backtesting-without-refitting.ipynb  02-backtesting-with-refitting-expanding-training-window.ipynb  03-backtesting-with-refitting-rolling-training-window.ipynb  04-backtesting-with-intermittent-refitting.ipynb  05-backtesting-with-gap.ipynb  exercise-1-solution.ipynb  exercise-1.ipynb  exercise-2-solution.ipynb  exercise-2.ipynb
04-multistep-forecasting/: 03-recursive-forecasting-with-window-features.ipynb  05-direct-forecasting-sklearn.ipynb  (+1 more)
(+45 files in other folders)
