[tool.poetry]
name = "forecasting-with-machine-learning"
version = "0.1.0"
description = ""
authors = ["Nuno Svensson <nuosvensson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
skforecast = {extras = ["full"], version = "^0.14.0"}
ipywidgets = "^8.1.5"
notebook = "^7.3.2"
widgetsnbextension = "^4.0.13"
jupyterlab-widgets = "^3.0.13"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
feature-engine = "^1.8.2"
scikit-learn = "1.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
